--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                     style="background-image: url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0?w=1920&h=1080&fit=crop')">
                 </div>
                 <div class="slide-content">
-                    <h1 class="slide-title" data-animation="fade-up"><span style="color: #8B1A1A;">Authentic
-                            Flavors</span></h1>
+                    <h1 class="slide-title" data-animation="fade-up">Authentic Flavors</h1>
                     <p class="slide-subtitle" data-animation="fade-up-delay">Crafted with passion and tradition</p>
                     <a href="#about" class="slide-btn" data-animation="fade-up-delay-2">Our Story</a>
                 </div>
