your commit message

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div class="info-card">
                         <div class="info-icon">📍</div>
                         <h4>Address</h4>
-                        <p>123 Gourmet Street<br>Culinary District, CD 12345</p>
+                        <p>Janakpur<br>Nepal</p>
                     </div>
                     <div class="info-card">
                         <div class="info-icon">📞</div>
