dark mode enabled

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="reserve-btn">Reserve Table</button>
+            <button class="theme-toggle" id="themeToggle" aria-label="Toggle Dark Mode">
+                <span class="sun-icon">☀️</span>
+                <span class="moon-icon">🌙</span>
+            </button>
             <button class="mobile-toggle" id="mobileToggle">
                 <span></span>
                 <span></span>
